# Tau-Alpha

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  alpha-docker.sh  alpha.sh  build.sh  clean.sh  devel.sh  docker-compose.yml
cmake/: FindWt.cmake  alpha-common.cmake  build_boost.cmake  build_wt.cmake  build_zlib.cmake  init_submodule.cmake  install_and_activate_emsdk.cmake
config/: alpha.dtml  alpha.ptml  config.common.ptml  ide.dtml
docroot/: alpha.css  js  pics  resources  style  tml.js  tml.wasm
docroot/codemirror_grammar/: codemirror_grammar.js  tml_grammar.js
docroot/resources/: bootstrap.reduced.css
docroot/resources/CodeMirror/lib/: codemirror.js
docroot/resources/splitjs/: split.min.js.map  splitjs.css
docroot/resources/themes/default/: wt.css
docroot/splitjs/: splitjs.css
irc/: benchmark  clean.tml  command  config  fileout_rules.tml  help.tml  iirunner  monitor  taubot.tml
messages/: agent.xml  alpha.xml  channel.xml  ide.xml  message.xml
src/: CMakeLists.txt  build.sh  main.cpp
src/Wt/: TML_editor.h  alpha.cpp  alpha.h  codemirror.h  file_item.cpp  file_item.h  runtime.cpp  runtime_browser.cpp  splitjs.h  workspace.cpp  workspace.h
src/alpha/: agent.h  alpha.cpp  alpha.h  channel.h  common.cpp  config.cpp  config.h  defs.h  filter.cpp  filter.h  message.h  output.cpp  protocol.h  protocol_nonet.cpp  runtime.cpp  runtime_backend.cpp  runtime_browser.cpp  runtime_frontend.cpp  storage.cpp  storage.h
src/alpha/repl/: CMakeLists.txt  TML  main.cpp  repl.cpp  repl.h  test.session
src/alpha/widget/: TML_editor.h  agent_view.h  channel_view.h  codemirror.h  file_item.cpp  file_item.h  ide.cpp  ide.h  message_view.h  splitjs.h  workspace.cpp  workspace.h
src/alpha/wt/: TML_editor.h  app.cpp  app.h  codemirror.h  file_item.cpp  file_item.h  splitjs.h  workspace.cpp  workspace.h
src/alpha/wt/ide/: ide.cpp  ide.h  menu.h  runtime_backend.cpp  runtime_frontend.cpp  toolbar.h
src/alpha/wt/view/: agent.cpp  agent.h  channel.cpp  channel.h  channels.cpp  channels.h  identities.cpp  identities.h  message.cpp  message.h  register_form.cpp  register_form.h
src/tml/: datafile.cpp  datafile.h  query.cpp  query.h  relation.cpp  relation.h  relationfile.cpp  relationfile.h
workspace/: 13_armageddon.tml  14_UNSAT.tml  test2.tml  test3.tml  test4.tml  tml.g
